--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  helvetic.tar.xz: 593eb62fe9ef6a742dcf7f04e54226b9025aef5a
+  helvetic.r61719.tar.xz: 25375a47224664133ccfe2205f18f4b39ab89686
